--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
                 <li>
                   <details>
                     <summary>MongoDB</summary>
-                    <p></p>
+                    <p>MongoDB is a NoSQL document-based database that is highly scalable, flexible and offers high performance. It uses a JSON-like format for storing data, supports secondary indexes and has built-in sharding for horizontal scalability. It is commonly used in big data and real-time web applications.</p>
                   </details>
                 </li>
               </ul>
@@ -165,7 +165,7 @@
       </main>
     </div>
     <footer class="gone">
-
+      <h2>Ye Olde Footer</h2>
     </footer>
     <script src="main.js" async defer></script>
   </body>
