Modified for mobile.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ce1247ceea.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -171,6 +172,7 @@
               <li>
                 <h3><button data-project="uvt">User Verification Tool</button></h3>
               </li>
+              <li><h3>And more to come...</h3></li>
             </div>
             <div class="project-details">
               <div class="project rcarroll" data-project="rcarroll">
@@ -222,6 +224,7 @@
         <section id="contact" class="box">
           <h2>Contact</h2>
           <hr />
+          <h4>Email me at <a href="mailto:rcarroll@rcarroll.dev">rcarroll@rcarroll.dev</a></h4>
         </section>
       </main>
     </div>
