Minified js and css, added nginx.conf

--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,26 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
-<html>
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>rcarroll.dev</title>
-    <meta name="description" content="">
+    <title>Russ Carroll - Developer Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
+    <meta name="description" content="Eplore Russ Carroll's developer portfolio, showcasing expertise in IT systems engineering, software development, and cloud infrastructure. Discover projects, technical skills, and a passion for innovation just 15 minutes from Lake Mary, FL.">
+    <link rel="stylesheet" href="main.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ce1247ceea.js" crossorigin="anonymous"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VX5C1M0QHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VX5C1M0QHH');
+  </script>
   <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -231,6 +240,6 @@
     <footer class="gone">
       <h2 id="footer-content">Ye Olde Footer</h2>
     </footer>
-    <script src="main.js" async defer></script>
+    <script src="main.min.js" async defer></script>
   </body>
 </html>
