--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Eplore Russ Carroll's developer portfolio, showcasing expertise in IT systems engineering, software development, and cloud infrastructure. Discover projects, technical skills, and a passion for innovation just 15 minutes from Lake Mary, FL.">
     <link rel="stylesheet" href="main.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ce1247ceea.js" crossorigin="anonymous"></script>
   </head>
   <!-- Google tag (gtag.js) -->
@@ -240,6 +240,6 @@
     <footer class="gone">
       <h2 id="footer-content">Ye Olde Footer</h2>
     </footer>
-    <script src="main.min.js" async defer></script>
+    <script src="main.js" async defer></script>
   </body>
 </html>
